--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "@google/genai": "^1.34.0",
+    "fs": "^0.0.1-security",
+    "zod": "^4.2.1",
+    "zod-to-json-schema": "^3.25.0"
   }
 }
