codegen agent implementation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.18.0",
     "@google/genai": "^1.34.0",
     "fs": "^0.0.1-security",
     "zod": "^4.2.1",
