--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/node": "^25.0.3",
+    "@types/unzipper": "^0.10.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.18.0",
     "@google/genai": "^1.34.0",
+    "archiver": "^7.0.1",
     "fs": "^0.0.1-security",
+    "unzipper": "^0.12.3",
     "zod": "^4.2.1",
     "zod-to-json-schema": "^3.25.0"
   }
